carousel dot overlap issue fixed

--- a/src/data/styles/overrides.scss
+++ b/src/data/styles/overrides.scss
@@ -113,7 +113,7 @@
     }
 
     .slick-dots {
-        bottom: -10px !important;
+        bottom: -20px !important;
         overflow-x: hidden;
 
         li, .slick-active {
